# pytest-mock-generator

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  cookiecutter-config-file.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml  publish-to-pypi.yml
pytest_mock_generator/: __init__.py
tests/: test_pytest_mock_generator.py  test_utils.py
tests/examples/: code_snippets.py  test_public_api.py
